--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@rollup/plugin-node-resolve": "^15.2.3",
     "vite": "^5.0.12",
-    "xterm": "^5.3.0"
+    "xterm": "^5.3.0",
+    "xterm-addon-web-links": "^0.9.0"
   }
 }
